feat : Reservation 도메인을 JPA로